--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ import org.gradle.plugins.ide.eclipse.model.Facet
 buildscript {
 	  repositories {
 			mavenLocal()
+			mavenCentral()
 			maven {url "https://plugins.gradle.org/m2/"}
 		}
 	  dependencies {	  
@@ -49,5 +50,6 @@ jar {
     		include('GradleMQTag-1.0.jar')
         }
     }
-} 
+}
+
 
