--- a/.settings/org.eclipse.buildship.core.prefs
+++ b/.settings/org.eclipse.buildship.core.prefs
@@ -1,9 +1,8 @@
 build.commands=org.eclipse.jdt.core.javabuilder
 connection.arguments=
-connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
 connection.java.home=C\:\\Program Files\\Java\\jdk1.8.0_101
 connection.jvm.arguments=
-connection.project.dir=
+connection.project.dir=../was-zt-web
 derived.resources=.gradle,build
 eclipse.preferences.version=1
 natures=org.eclipse.jdt.core.javanature
